--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,4 +1,7 @@
-input::-webkit-outer-spin-button,  
+/**
+ input选中时的样式
+ */
+input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button{  
     -webkit-appearance: none !important;  
     margin: 0;  
